-----------------------------
 Change history for MATPOWER
-----------------------------

Version:    3.2

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
$Id$
Copyright (c) 1996-2008 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.


Changes since 3.2
-----------------

3/25/09
    - Added add_userfcn.m as to make it easy to add a new
      userfcn to a case struct, whether or not it already
      has any. Modified the fixed reserve example to use this.

3/24/09
    - Added step-controlled PDIPM variant (OPF_ALG = 565) of
      AC OPF solver.

3/19/09
    - Added pdipm_qp() as a new QP/LP solver based on the
      pure Matlab PDIPM solver used for AC OPFs.
    - Added option 'OPF_ALG_DC' and refactored some code to allow
      the user to select the desired solver for DC OPF.
    - Added code to opf.m to automatically convert single-block
      piecewise linear costs to linear polynomial costs to reduce
      the number of variables and constraints in the problem.

3/17/09
    - Numerous code optimizations based on profiling code, e.g.
      changed all calls to spdiags() to equivalent call to sparse().

3/13/09
    - Added a pure Matlab implementation of the PDIPM (primal-dual
      interior point method) solver for the AC OPF. Now the default
      solver (OPF_ALG = 560) if there are no optional MEX solvers
      installed.
    - Modified fmincopf, copf, lpopf and dcopf to allow branch
      RATE_A = 0 or RATE_A > 1e10 to mean the branch is unconstrained
      (not included at all in inequality constraints). TSPOPF solvers
      already did this. Included in tests.

3/11/09
    - Allow userfcn to be an array, with elements processed in order.

1/14/09
    - New version of case39.m with some additional versions, created
      from documented sources.

7/3/08
    - Added a top level program, runopf_w_res(), to solve an OPF with