@@ -1,5 +1,5 @@
-function [baseMVA, bus, gen, branch, areas, gencost, Au, lbu, ubu, ...
-        mpopt, N, fparm, H, Cw, z0, zl, zu, userfcn] = ...
+function [baseMVA, bus, gen, branch, gencost, Au, lbu, ubu, ...
+        mpopt, N, fparm, H, Cw, z0, zl, zu, userfcn, areas] = ...
     opf_args(baseMVA, bus, gen, branch, areas, gencost, Au, lbu, ubu, ...
         mpopt, N, fparm, H, Cw, z0, zl, zu)
 %OPF_ARGS  Parses and initializes OPF input arguments.
@@ -7,8 +7,10 @@ function [baseMVA, bus, gen, branch, areas, gencost, Au, lbu, ubu, ...
 %   Returns the full set of initialized OPF input arguments ...
 %
 %   [mpc, mpopt] = opf_args( ... )
-%   [baseMVA, bus, gen, branch, areas, gencost, A, l, u, mpopt, ...
+%   [baseMVA, bus, gen, branch, gencost, A, l, u, mpopt, ...
 %    N, fparm, H, Cw, z0, zl, zu, userfcn] = opf_args( ... )
+%   [baseMVA, bus, gen, branch, gencost, A, l, u, mpopt, ...
+%    N, fparm, H, Cw, z0, zl, zu, userfcn, areas] = opf_args( ... )
 %
 %   ... for all of the following calling combinations ...
 %
@@ -32,8 +34,9 @@ function [baseMVA, bus, gen, branch, areas, gencost, Au, lbu, ubu, ...
 %
 %   The data for the problem can be specified in one of three ways:
 %   (1) a string (mpc) containing the file name of a MATPOWER case
-%     which defines the data matrices baseMVA, bus, gen, branch,
-%     areas and gencost.
+%     which defines the data matrices baseMVA, bus, gen, branch, and
+%     gencost (areas is not used at all, it is only included for
+%     backward compatibility of the API).
 %   (2) a struct (mpc) containing the data matrices as fields.
 %   (3) the individual data matrices themselves.
 %   
@@ -169,8 +172,13 @@ if isstr(baseMVA) || isstruct(baseMVA)   %% passing filename or struct
     error('opf_args.m: Incorrect input parameter order, number or type');
   end
   mpc = loadcase(casefile);
-  [baseMVA, bus, gen, branch, areas, gencost] = ...
-    deal(mpc.baseMVA, mpc.bus, mpc.gen, mpc.branch, mpc.areas, mpc.gencost);
+  [baseMVA, bus, gen, branch, gencost] = ...
+    deal(mpc.baseMVA, mpc.bus, mpc.gen, mpc.branch, mpc.gencost);
+  if isfield(mpc, 'areas')
+    areas = mpc.areas;
+  else
+    areas = [];
+  end
   if isempty(Au) && isfield(mpc, 'A')
     [Au, lbu, ubu] = deal(mpc.A, mpc.l, mpc.u);
   end
@@ -299,7 +307,6 @@ if nargout == 2
         'bus',      bus,        ...
         'gen',      gen,        ...
         'branch',   branch,     ...
-        'areas',    areas,      ...
         'gencost',  gencost,    ...
         'A',        Au,         ...
         'l',        lbu,        ...
@@ -313,6 +320,9 @@ if nargout == 2
         'zu',       zu,         ...
         'userfcn',  userfcn     ...
     );
+  if ~isempty(areas)
+    baseMVA.areas = areas;
+  end
   bus = mpopt;
 end
 
